...
                                                    <rect key="frame" x="20" y="11" width="374" height="21"/>
                                                    <subviews>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rSq-hE-0YK">
                                                            <rect key="frame" x="0.0" y="0.5" width="33" height="20.5"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0bP-xa-R41">
                                                            <rect key="frame" x="153" y="0.5" width="65.5" height="20.5"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6JJ-af-d34">
                                                            <rect key="frame" x="338" y="0.5" width="36" height="20.5"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="date"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                            <nil key="textColor"/>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iMS-L1-68O">
                                        <rect key="frame" x="138.5" y="60.5" width="87.5" height="20.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JAE-Dx-G6j">
                                        <rect key="frame" x="0.0" y="272" width="364" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                            <constraint firstAttribute="height" constant="40" id="dgY-vi-M7m"/>
                                        </constraints>
                                        <state key="normal" title="Save">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
